@@ -172,4 +172,6 @@ public class ContainerNode extends PNode {
 
     //Get rid of it because it disrupts the layout when dropping into the scoring cell.
     public void removeSplitButton() { removeChild( splitButton ); }
+
+    public void addBackSplitButton() { addChild( splitButton ); }
 }
